# wiki

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
plans/: llm_wiki_claude_code_plan.md
src/llm_wiki/: __init__.py  cli.py  config.py  embeddings.py  index.py  ingest.py  lint.py  prompts.py  query.py  wiki.py
src/llm_wiki/models/: __init__.py  embeddings.py  frontmatter.py  operations.py  source.py
tests/: conftest.py  test_config.py  test_embeddings_module.py  test_index.py  test_ingest.py  test_lint.py  test_prompts.py  test_query.py  test_wiki.py
tests/test_models/: test_embeddings.py  test_frontmatter.py  test_operations.py  test_source.py
wiki/: classical_ml.md  data_pipelines.md  deep_learning_fundamentals.md  embeddings.md  experiment_design.md  feature_engineering_recsys.md  index.md  learning_to_rank.md  llm_fine_tuning.md  llm_fundamentals.md  log.md  loss_functions_and_optimization.md  ml_system_design.md  mlops.md  model_serving.md  multi_stage_ranking.md  ranking_metrics.md  recommendation_systems.md  search_and_retrieval.md  two_tower_architecture.md  vector_search.md
wiki/.meta/: embeddings.json  schema.json
wiki/.obsidian/: workspace.json
