[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-wiki"
version = "0.1.0"
description = "Karpathy's LLM Wiki pattern — compiling knowledge that compounds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.50.0",
    "numpy>=2.0.0",
    "python-frontmatter>=1.1.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "typer>=0.12.0",
    "rich>=14.0.0",
    "httpx>=0.27.0",
    "youtube-transcript-api>=0.6.0",
    "pypdf>=4.0.0",
]

[project.scripts]
llm-wiki = "llm_wiki.cli:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "pytest-cov>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "ANN",  # flake8-annotations
    "RUF",  # ruff-specific rules
    "PTH",  # flake8-use-pathlib
    "TCH",  # flake8-type-checking
]
ignore = [
    "ANN101",  # self type annotation
    "ANN102",  # cls type annotation
    "ANN401",  # allow Any
]

[tool.ruff.lint.isort]
known-first-party = ["llm_wiki"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── pytest ─────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v --cov=src/llm_wiki --cov-report=term-missing"
